PageResponse e correção das categorias